# glfer

./: AUTHORS  ChangeLog  HACKING  Makefile.in  NEWS  README  TODO  aclocal.m4  audio.c  audio.h  avg.c  avg.h  bell-p-w.c  bell-p-w.h  config.h.in  configure  configure.in  cw_rx.c  cw_rx.h  fft.c  fft.h  fft_radix2.c  fft_radix2.h  g-l_dpss.c  g-l_dpss.h  g_about.c  g_about.h  g_file_dialogs.c  g_file_dialogs.h  g_main.c  g_main.h  g_options.c  g_options.h  g_scope.c  g_scope.h  g_txmsg.c  g_txmsg.h  glfer.1  glfer.c  glfer.h  (+17 more)
