dnl Process this file with autoconf to produce a configure script.
AC_INIT(glfer, 0.4.2, in3otd@qsl.net)
AC_CONFIG_SRCDIR(glfer.c)

dnl For automake
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl you should add CFLAGS="" here, 'cos it is set to -g by PROG_CC
dnl CFLAGS="-ggdb -O2 -Wall"

dnl Checks for libraries.
AC_CHECK_LIB(fftw, fftw_create_plan, , , -lm)
AC_CHECK_LIB(rfftw, rfftw_create_plan, , , -lm)
AM_PATH_GTK_2_0(2.1.0, ,
            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))
AC_CHECK_LIB(m, sin)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/io.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday strdup)

dnl Check for debug
AC_ARG_ENABLE(debug,
[  --enable-debug         enable support for debugging output],  AC_DEFINE(DEBUG, 1, "Define if you want to have debug informations"),)

dnl Check for dmalloc usage
AC_ARG_ENABLE(dmalloc,
[  --enable-dmalloc       enable support for the dmalloc debugging library],
  [ac_cv_dmalloc="$enableval"],
  [ac_cv_dmalloc="no"])

dnl Allow building with dmalloc.  Do this last to avoid screwing up any
dnl other checks above.
case "$ac_cv_dmalloc" in
  yes) AC_CHECK_HEADERS(dmalloc.h)
       AC_CHECK_LIB(dmalloc, dmalloc_shutdown)
       CPPFLAGS="$CPPFLAGS -DDMALLOC_FUNC_CHECK" ;;
esac

AC_OUTPUT(Makefile)

dnl output $canonical_host_type ??
AC_MSG_RESULT([

$PACKAGE-$VERSION is now configured 

  Source directory:     $srcdir
  Installation prefix:  $prefix
  C compiler:           $CC $XTRA_CFLAGS $CFLAGS
  Libraries:            ${LIBS}

])
